--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -21,15 +21,15 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_EC2_METADATA_DISABLED: true
         run: |
-          <?>
+          aws --version
       - name: Sync Bucket
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_EC2_METADATA_DISABLED: true
         run: |
-          aws s3 <?> \
+          aws s3 sync \
             --region ap-northeast-2 \
-            build s3://<?> \
+            build s3://My-Bucket-Name \
             --delete
-        working-directory: <?>
+        working-directory: ./my-agora-states-client
