--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -14,6 +14,8 @@ jobs:
         working-directory: ./my-agora-states-client
       - name: Build
         run: npm run build
+        env:
+          CI: "" 
         working-directory: ./my-agora-states-client
       - name: SHOW AWS CLI VERSION
         env:
