--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -14,8 +14,6 @@ jobs:
         working-directory: ./my-agora-states-client
       - name: Build
         run: npm run build
-        env:
-          CI: "" 
         working-directory: ./my-agora-states-client
       - name: SHOW AWS CLI VERSION
         env:
@@ -32,6 +30,6 @@ jobs:
         run: |
           aws s3 sync \
             --region ap-northeast-2 \
-            build s3://fe-52-soohyuneee-s3 \
+            build s3://fe-52-soohyuneee-s3/* \
             --delete
         working-directory: ./my-agora-states-client
