--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -13,7 +13,7 @@ jobs:
         run: npm install
         working-directory: ./my-agora-states-client
       - name: Build
-        run: npm run build
+        run: npm build
         working-directory: ./my-agora-states-client
       - name: SHOW AWS CLI VERSION
         env:
@@ -28,7 +28,7 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_EC2_METADATA_DISABLED: true
         run: |
-          aws s3 cd \
+          aws s3 sync \
             --region ap-northeast-2 \
             build s3://fe-52-soohyuneee-s3 \
             --delete
